@@ -1,3 +1,3 @@
 PPI::Document
   PPI::Statement
-    PPI::Token::Number  	'.1234'
+    PPI::Token::Number::Float  	'.1234'
