@@ -1,5 +1,9 @@
 Revision history for Perl extension PPI
 
+1.xxx
+	Details:
+	- Split out PPI::Token::Number subclasses
+
 1.118   Fri 22 Sep 2006
 	Summary:
 	- Better 5.10 support
